--- a/.env
+++ b/.env
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=103.149.46.78
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=termosi1_data
+DB_USERNAME=termosi1
+DB_PASSWORD='DY1B7x!#2cLm8s'
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
